--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
-    <title>Video List</title>
+    <title>Preface - Movie Trailers</title>
     <style>
       body {
         font-family: "Montserrat", sans-serif;
@@ -31,7 +31,8 @@
     </style>
   </head>
   <body>
-    <h1>Video List</h1>
+    <h1>Creative Media Design</h1>
+    <h2>The Movie Trailers </h2>
     <ul id="videoList"></ul>
 
     <script>
