--- a/index.html
+++ b/index.html
@@ -34,7 +34,92 @@
     <h1>Creative Media Design</h1>
     <h2>The Movie Trailers </h2>
     <ul id="videoList"></ul>
-
+    <div class="container">
+        <div class="card">
+            <img src="images/Abby Yu.png" alt="Abby Yu">
+            <p>Abby Yu</p>
+        </div>
+        <div class="card">
+            <img src="images/Addison Ong.png" alt="Addison Ong">
+            <p>Addison Ong</p>
+        </div>
+        <div class="card">
+            <img src="images/Aison Chiu.png" alt="Aison Chiu">
+            <p>Aison Chiu</p>
+        </div>
+        <div class="card">
+            <img src="images/Andreea Cheung.png" alt="Andreea Cheung">
+            <p>Andreea Cheung</p>
+        </div>
+        <div class="card">
+            <img src="images/Annette Yu.png" alt="Annette Yu">
+            <p>Annette Yu</p>
+        </div>
+        <div class="card">
+            <img src="images/Brandon Kwok.png" alt="Brandon Kwok">
+            <p>Brandon Kwok</p>
+        </div>
+        <div class="card">
+            <img src="images/Charles Liu.png" alt="Charles Liu">
+            <p>Charles Liu</p>
+        </div>
+        <div class="card">
+            <img src="images/Chloe Wong.png" alt="Chloe Wong">
+            <p>Chloe Wong</p>
+        </div>
+        <div class="card">
+            <img src="images/Curtis Leung.png" alt="Curtis Leung">
+            <p>Curtis Leung</p>
+        </div>
+        <div class="card">
+            <img src="images/Curtis Wong.png" alt="Curtis Wong">
+            <p>Curtis Wong</p>
+        </div>
+        <div class="card">
+            <img src="images/Cyrus Lai.png" alt="Cyrus Lai">
+            <p>Cyrus Lai</p>
+        </div>
+        <div class="card">
+            <img src="images/Elgar Lam.png" alt="Elgar Lam">
+            <p>Elgar Lam</p>
+        </div>
+        <div class="card">
+            <img src="images/Hei Yu Halley Siu.png" alt="Hei Yu Halley Siu">
+            <p>Hei Yu Halley Siu</p>
+        </div>
+        <div class="card">
+            <img src="images/Jayden Heng.png" alt="Jayden Heng">
+            <p>Jayden Heng</p>
+        </div>
+        <div class="card">
+            <img src="images/Marcus Cheung.png" alt="Marcus Cheung">
+            <p>Marcus Cheung</p>
+        </div>
+        <div class="card">
+            <img src="images/Maxwell Liu.png" alt="Maxwell Liu">
+            <p>Maxwell Liu</p>
+        </div>
+        <div class="card">
+            <img src="images/Natalie Tsang.png" alt="Natalie Tsang">
+            <p>Natalie Tsang</p>
+        </div>
+        <div class="card">
+            <img src="images/Sek Ching Isabella Li.png" alt="Sek Ching Isabella Li">
+            <p>Sek Ching Isabella Li</p>
+        </div>
+        <div class="card">
+            <img src="images/Tin Yat Javen Hooi.png" alt="Tin Yat Javen Hooi">
+            <p>Tin Yat Javen Hooi</p>
+        </div>
+        <div class="card">
+            <img src="images/Tsz Yin Abby Siu.png" alt="Tsz Yin Abby Siu">
+            <p>Tsz Yin Abby Siu</p>
+        </div>
+        <div class="card">
+            <img src="images/Zac Woo.webp" alt="Zac Woo">
+            <p>Zac Woo</p>
+        </div>
+    </div>
     <script>
       fetch("videos.json")
         .then((response) => response.json())
