--- a/index.html
+++ b/index.html
@@ -28,6 +28,27 @@
         text-decoration: none;
         color: #007bff;
       }
+      .container {
+          display: flex;
+          flex-wrap: wrap;
+          justify-content: center;
+      }
+      .card {
+          width: 200px;
+          margin: 10px;
+          text-align: center;
+      }
+      .card img {
+          width: 100%;
+          height: 150px;
+          object-fit: cover;
+      }
+      h1 {
+          margin-top: 20px;
+      }
+      .text-center {
+          text-align: center;
+      }
     </style>
   </head>
   <body>
