--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
             <p>Elgar Lam</p>
         </div>
         <div class="card">
-            <img src="images/Hei Yu Halley Siu.png" alt="Hei Yu Halley Siu">
-            <p>Hei Yu Halley Siu</p>
+            <img src="images/Hei Yu Hailey Siu.png" alt="Hei Yu Hailey Siu">
+            <p>Hei Yu Hailey Siu</p>
         </div>
         <div class="card">
             <img src="images/Jayden Heng.png" alt="Jayden Heng">
