--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
         max-width: 800px;
         margin: 0 auto;
         padding: 20px;
+        background-color: #f0f0f0;
+      }
+      h1, h2 {
+        text-align: center;
+        color: #333;
       }
       ul {
         list-style-type: none;
@@ -27,136 +32,104 @@
       a {
         text-decoration: none;
         color: #007bff;
+        transition: color 0.3s ease;
+      }
+      a:hover {
+        color: #0056b3;
       }
       .container {
-          display: flex;
-          flex-wrap: wrap;
-          justify-content: center;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
       }
       .card {
-          width: 200px;
-          margin: 10px;
-          text-align: center;
+        width: 200px;
+        margin: 10px;
+        text-align: center;
+        background-color: white;
+        border-radius: 8px;
+        box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+        transition: transform 0.3s ease;
+      }
+      .card:hover {
+        transform: translateY(-5px);
       }
       .card img {
-          width: 100%;
-          height: 150px;
-          object-fit: cover;
+        width: 100%;
+        height: 150px;
+        object-fit: cover;
+        border-top-left-radius: 8px;
+        border-top-right-radius: 8px;
       }
-      h1 {
-          margin-top: 20px;
+      .card p {
+        padding: 10px;
+        margin: 0;
       }
       .text-center {
-          text-align: center;
+        text-align: center;
+      }
+      .toggle-view {
+        display: block;
+        margin: 20px auto;
+        padding: 10px 20px;
+        background-color: #007bff;
+        color: white;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        transition: background-color 0.3s ease;
+      }
+      .toggle-view:hover {
+        background-color: #0056b3;
+      }
+      .hidden {
+        display: none;
       }
     </style>
   </head>
   <body>
     <h1>Creative Media Design</h1>
-    <h2>The Movie Trailers </h2>
-    <ul id="videoList"></ul>
-    <div class="container">
-        <div class="card">
-            <img src="images/Abby Yu.png" alt="Abby Yu">
-            <p>Abby Yu</p>
-        </div>
-        <div class="card">
-            <img src="images/Addison Ong.png" alt="Addison Ong">
-            <p>Addison Ong</p>
-        </div>
-        <div class="card">
-            <img src="images/Aison Chiu.png" alt="Aison Chiu">
-            <p>Aison Chiu</p>
-        </div>
-        <div class="card">
-            <img src="images/Andreea Cheung.png" alt="Andreea Cheung">
-            <p>Andreea Cheung</p>
-        </div>
-        <div class="card">
-            <img src="images/Annette Yu.png" alt="Annette Yu">
-            <p>Annette Yu</p>
-        </div>
-        <div class="card">
-            <img src="images/Brandon Kwok.png" alt="Brandon Kwok">
-            <p>Brandon Kwok</p>
-        </div>
-        <div class="card">
-            <img src="images/Charles Liu.png" alt="Charles Liu">
-            <p>Charles Liu</p>
-        </div>
-        <div class="card">
-            <img src="images/Chloe Wong.png" alt="Chloe Wong">
-            <p>Chloe Wong</p>
-        </div>
-        <div class="card">
-            <img src="images/Curtis Leung.png" alt="Curtis Leung">
-            <p>Curtis Leung</p>
-        </div>
-        <div class="card">
-            <img src="images/Curtis Wong.png" alt="Curtis Wong">
-            <p>Curtis Wong</p>
-        </div>
-        <div class="card">
-            <img src="images/Cyrus Lai.png" alt="Cyrus Lai">
-            <p>Cyrus Lai</p>
-        </div>
-        <div class="card">
-            <img src="images/Elgar Lam.png" alt="Elgar Lam">
-            <p>Elgar Lam</p>
-        </div>
-        <div class="card">
-            <img src="images/Hei Yu Hailey Siu.png" alt="Hei Yu Hailey Siu">
-            <p>Hei Yu Hailey Siu</p>
-        </div>
-        <div class="card">
-            <img src="images/Jayden Heng.png" alt="Jayden Heng">
-            <p>Jayden Heng</p>
-        </div>
-        <div class="card">
-            <img src="images/Marcus Cheung.png" alt="Marcus Cheung">
-            <p>Marcus Cheung</p>
-        </div>
-        <div class="card">
-            <img src="images/Maxwell Liu.png" alt="Maxwell Liu">
-            <p>Maxwell Liu</p>
-        </div>
-        <div class="card">
-            <img src="images/Natalie Tsang.png" alt="Natalie Tsang">
-            <p>Natalie Tsang</p>
-        </div>
-        <div class="card">
-            <img src="images/Sek Ching Isabella Li.png" alt="Sek Ching Isabella Li">
-            <p>Sek Ching Isabella Li</p>
-        </div>
-        <div class="card">
-            <img src="images/Tin Yat Javen Hooi.png" alt="Tin Yat Javen Hooi">
-            <p>Tin Yat Javen Hooi</p>
-        </div>
-        <div class="card">
-            <img src="images/Tsz Yin Abby Siu.png" alt="Tsz Yin Abby Siu">
-            <p>Tsz Yin Abby Siu</p>
-        </div>
-        <div class="card">
-            <img src="images/Zac Woo.webp" alt="Zac Woo">
-            <p>Zac Woo</p>
-        </div>
-    </div>
+    <h2>The Movie Trailers</h2>
+    <button id="toggleView" class="toggle-view">Toggle View</button>
+    <ul id="videoList" class="hidden"></ul>
+    <div id="cardContainer" class="container"></div>
     <script>
       fetch("videos.json")
         .then((response) => response.json())
         .then((data) => {
           const videoList = document.getElementById("videoList");
+          const cardContainer = document.getElementById("cardContainer");
+          
           data.videos.forEach((video) => {
+            // Create list item
             const li = document.createElement("li");
             const a = document.createElement("a");
-            a.href = `video.html?name=${encodeURIComponent(
-              video.name
-            )}&id=${encodeURIComponent(video.fileId)}`;
+            a.href = `video.html?name=${encodeURIComponent(video.name)}&id=${encodeURIComponent(video.fileId)}`;
             a.textContent = video.name;
             li.appendChild(a);
             videoList.appendChild(li);
+
+            // Create card
+            const card = document.createElement("div");
+            card.className = "card";
+            card.innerHTML = `
+              <img src="images/${video.name.replace(/ /g, '_')}.png" alt="${video.name}" onerror="this.src='images/placeholder.png'">
+              <p><a href="video.html?name=${encodeURIComponent(video.name)}&id=${encodeURIComponent(video.fileId)}">${video.name}</a></p>
+            `;
+            cardContainer.appendChild(card);
           });
         });
+
+      // Toggle view functionality
+      const toggleButton = document.getElementById('toggleView');
+      const videoList = document.getElementById('videoList');
+      const cardContainer = document.getElementById('cardContainer');
+
+      toggleButton.addEventListener('click', () => {
+        videoList.classList.toggle('hidden');
+        cardContainer.classList.toggle('hidden');
+        toggleButton.textContent = videoList.classList.contains('hidden') ? 'Show List View' : 'Show Card View';
+      });
     </script>
   </body>
 </html>
