--- a/index.html
+++ b/index.html
@@ -94,6 +94,32 @@
     <ul id="videoList" class="hidden"></ul>
     <div id="cardContainer" class="container"></div>
     <script>
+      const imageMap = {
+        "Abby Yu": "Abby Yu.png",
+        "Addison Ong": "Addison Ong.png",
+        "Adelle Wu": "placeholder.png",
+        "Aison Chiu": "Aison Chiu.png",
+        "Andreea Cheung": "Andreea Cheung.png",
+        "Annette Yu": "Annette Yu.png",
+        "Brandon Kwok": "Brandon Kwok.png",
+        "Charles Liu": "Charles Liu.png",
+        "Chloe Wong": "Chloe Wong.png",
+        "Curtis Leung": "Curtis Leung.png",
+        "Curtis Wong": "Curtis Wong.png",
+        "Cyrus Lai": "Cyrus Lai.png",
+        "Elgar Lam": "Elgar Lam.png",
+        "Gwan Yu Raven Siu": "placeholder.png",
+        "Hei Yu Hailey Siu": "Hei Yu Halley Siu.png",
+        "Jayden Heng": "Jayden Heng.png",
+        "Marcus Cheung": "Marcus Cheung.png",
+        "Maxwell Liu": "Maxwell Liu.png",
+        "Natalie Tsang": "Natalie Tsang.png",
+        "Sek Ching Isabella Li": "Sek Ching Isabella Li.png",
+        "Tin Yat Javen Hooi": "Tin Yat Javen Hooi.png",
+        "Tsz Yin Abby Siu": "Tsz Yin Abby Siu.png",
+        "Zac Woo": "Zac Woo.webp"
+      };
+
       fetch("videos.json")
         .then((response) => response.json())
         .then((data) => {
@@ -112,8 +138,9 @@
             // Create card
             const card = document.createElement("div");
             card.className = "card";
+            const imageSrc = imageMap[video.name] || "placeholder.png";
             card.innerHTML = `
-              <img src="images/${video.name.replace(/ /g, '_')}.png" alt="${video.name}" onerror="this.src='images/placeholder.png'">
+              <img src="images/${imageSrc}" alt="${video.name}" onerror="this.src='images/placeholder.png'">
               <p><a href="video.html?name=${encodeURIComponent(video.name)}&id=${encodeURIComponent(video.fileId)}">${video.name}</a></p>
             `;
             cardContainer.appendChild(card);
