--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       const imageMap = {
         "Abby Yu": "Abby Yu.png",
         "Addison Ong": "Addison Ong.png",
-        "Adelle Wu": "placeholder.png",
+        "Adelle Wu": "Adelle Wu.png",
         "Aison Chiu": "Aison Chiu.png",
         "Andreea Cheung": "Andreea Cheung.png",
         "Annette Yu": "Annette Yu.png",
