--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
   <body>
     <h1>Creative Media Design</h1>
     <h2>The Movie Trailers</h2>
-    <button id="toggleView" class="toggle-view">Toggle View</button>
+    
     <ul id="videoList" class="hidden"></ul>
     <div id="cardContainer" class="container"></div>
     <script>
@@ -108,8 +108,7 @@
         "Curtis Wong": "Curtis Wong.png",
         "Cyrus Lai": "Cyrus Lai.png",
         "Elgar Lam": "Elgar Lam.png",
-        "Gwan Yu Raven Siu": "placeholder.png",
-        "Hei Yu Hailey Siu": "Hei Yu Halley Siu.png",
+        "Hei Yu Hailey Siu": "Hei Yu Hailey Siu.png",
         "Jayden Heng": "Jayden Heng.png",
         "Marcus Cheung": "Marcus Cheung.png",
         "Maxwell Liu": "Maxwell Liu.png",
