--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
         text-align: center;
         color: #333;
       }
+      .center {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 50%;
+      }
       ul {
         list-style-type: none;
         padding: 0;
@@ -92,7 +98,7 @@
     </style>
   </head>
   <body>
-    <img src="images/Preface logo_grey.png">
+    <img src="images/Preface logo_grey.png" height="80" class="center">
     <h1>Creative Media Design</h1>
     <h2>The Movie Trailers</h2>
     
