--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       }
       a {
         text-decoration: none;
-        color: #007bff;
+        color: #85bcce;
         transition: color 0.3s ease;
       }
       a:hover {
