--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         font-family: "Montserrat", sans-serif;
         max-width: 800px;
         margin: 0 auto;
+        padding: 20px;
         background-color: #f0f0f0;
       }
       .sticky {
